[package]
name = "s2n-quic-t2"
version = "0.1.0"
edition = "2021"
publish = false # this is experimental

[dependencies]
bevy_ecs = "0.9"
rayon = "1"
s2n-codec = { path = "../../common/s2n-codec" }
s2n-quic-core = { version = "0.15", path = "../s2n-quic-core" }
s2n-quic-transport = { version = "0.15", path = "../s2n-quic-transport" }

[dev-dependencies]
bolero = "0.8"
s2n-quic-core = { path = "../s2n-quic-core", features = ["testing"] }
